--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -250,3 +250,6 @@
 切り取り方が面白い、視点が面白い。
 
 面白さは笑いというよりもユーモア。おかしさ。
+
+「面白いものは狂気を感じるほどの非効率から生まれるので、効率を求めれば求めるほどつまらないゴミが効率的に生産される」
+https://x.com/tomatoha831/status/2008862737355689986?s=20
