--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -90,3 +90,26 @@ https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
 音楽はリズムが9割。
 
 まずは4/4の120 bpmが基本。早めの心拍くらい。
+
+リズムは音のつながりと同じように、間も大事。音と音の間がどれくらい空いているか。
+
+1. テンポを感じる
+2. 拍を把握する
+3. 拍に合わせて音を鳴らす
+4. 同じテンポを維持する
+5. 拍子を把握する (どの拍にアクセントがあるか)
+6. 拍子のアクセントに合わせて音を鳴らす
+7. 音の長さや間の長さを拍で理解する
+
+まずはテンポを合わせるのが基本。
+さらに一拍を２つ３つと細かく区切って、複雑なリズムを理解できるのが次の段階。
+
+ただテンポを合わせるだけでも、走りすぎたり溜めすぎたりする。
+
+拍を細かく区切る場合、等間隔で区切るのがまず難しいところ。
+
+- テンポの変化に合わせる
+- 拍をさらに細かく分ける
+  - 2分割 (裏拍)
+  - 3分割 (3連符)
+    - 2拍や4拍を3分割したりすることもある
