--- a/shared/music/tips/リズム感を鍛える.md
+++ b/shared/music/tips/リズム感を鍛える.md
@@ -108,3 +108,10 @@ BPM 60に慣れたら90, 120と増やしていく。
 ファタールや踊り子なんかは160くらいある。
 
 首、胸、腰でリズムに乗る練習はダンスや歌でも使える。
+
+まずはメトロノームに合わせて手拍子で表拍を取るのが基本。テンポはゆっくりから始める。
+最初は全部同じで、慣れたら拍子に合わせてアクセントを強くする。
+次に裏拍。まず同じ長さで倍の回数叩いて、次に裏拍だけ取る。
+慣れたら表拍と裏拍が混ざったさらに複雑なテンポで取る。
+
+声や楽器でもリズムを取る練習をする。手拍子とはまた違う。例えば声なら息継ぎが必要。
