--- a/shared/lifestyle/meal/食の話題.md
+++ b/shared/lifestyle/meal/食の話題.md
@@ -1,10 +1,19 @@
-## Open
+## 好み
 
-- 食の好き嫌い
+- アレルギーはある？ (C)
+- 好きなものは？ (O)
+  - 米と麺ならどっちが好き？ (C)
+  - 米とパンならどっちが好き？ (C)
+  - 肉と魚ならどっちが好き？ (C)
+  - うどんとそばならどっちが好き？ (C)
+- 嫌いなものは？ (O)
+  - 何がダメ？ (O)
+  - 調理方法が違ってもダメ？ (C)
+- お酒は飲める？ (C)
 
-## Closed
+## 習慣
 
-- 朝食の有無
+- 朝食は食べる？ (C)
 
 ## その他
 
