--- a/shared/music/tips/リズム感を鍛える.md
+++ b/shared/music/tips/リズム感を鍛える.md
@@ -1,3 +1,18 @@
+## 4/4拍子
+
+1. 表拍に合わせて音を鳴らす
+2. 表拍と裏拍に合わせて音を鳴らす
+3. 裏拍に合わせて音を鳴らす
+4. 表拍と裏拍を２小節ごとに入れ替えて音を鳴らす
+5. テンポを上げて繰り返す
+6. メトロノームなしで繰り返す
+
+BPMはとりあえず60, 100, 140, 180くらいあればいい。
+
+慣れたら歯磨きしながらとか、別のことをしながらできるようにする。
+
+## その他
+
 [【毎日トレーニング】リズム感は、誰でも、身に付きます！【音大卒が教える】 - YouTube](https://youtu.be/GPirCGCuQLk?si=k0M4Z0ul74Ov9Ceq)
 
 基本的なリズム感のトレーニング
