--- a/shared/voice/training/issues/声が硬い.md
+++ b/shared/voice/training/issues/声が硬い.md
@@ -1,3 +1,5 @@
+特に地声が汚くなりがち。
+
 声が硬いのは響きが弱いから。
 主に喉の位置が高くて喉に響いてない。
 
@@ -16,3 +18,7 @@
 
 息が弱いと鼻の奥まで振動が届かなくて響きが弱くなりがち。
 小手先のテクニックとしては、声帯を開いて息を漏らしたり、軟口蓋を開いて鼻に息を通したりして補う。
+
+地声が汚いのはまず口や喉に響いてないから。
+口の中を広くして、喉を開く。
+ただ、口を開け過ぎると響かなくなるので、口の内側を広げる。
