--- a/shared/voice/training/issues/声に雑音が混じる.md
+++ b/shared/voice/training/issues/声に雑音が混じる.md
@@ -1,4 +1,10 @@
+声が汚い、といってもいい。
+
 声に雑音が混じるのは余計な筋肉が働いて余計な音が鳴っている。
+
 場合によっては肉体に異常がある場合もあるけど、まずは技術で対応できないか考える。
+喉が枯れたり、声帯結節ができたりするとハスキーになる。
 
 仮声帯が鳴っていると顎の下の振動が違う。ガサガサバリバリしてる。
+
+息漏れが多くてウィスパーボイスや裏声になっているのも雑音。
