--- a/shared/voice/training/tips/声を響かせる.md
+++ b/shared/voice/training/tips/声を響かせる.md
@@ -4,7 +4,37 @@
 
 強い息で、声帯がしっかり一番下で鳴っているなら、鼻にも響きやすくなるし、声もこもりにくい。強い響きになる。
 
+## 声が響くポイント
+
+声が響くポイントは主に3つある。
+以下の優先度で重要。
+
+1. 口
+2. 喉
+3. 鼻
+
+## 口に響かせる
+
+口の中も広い方がよく響く。
+軟口蓋を閉じる、頬や顎の力を抜く、口を開けすぎない、舌を前に出して平たくする、などの方法がある。
+
+口内の空間を広く保ったまま、つまり、舌をできるだけ平たくしたまま発音するのが難しいところ。
+
+練習では口も大きく開けて歌う。
+顎の力を抜く練習と、口内の空間を広く保つ練習。
+
+## 喉に響かせる
+
+喉を下げる。
+
+低いところで音を鳴らさないとそこまでの声道の響きが損なわれる。
+
+犬がぐるぐる唸るような感覚。
+
 ## 鼻に響かせる
+
+いきなり鼻に響かせようとしてはいけない。
+強い息が軟口蓋に当たると勝手に響くのであって、テクニックで鼻に響かせようとすると鼻声になる。
 
 鼻に響かせる場合でも軟口蓋は閉じる。鼻に息が抜けないようにする。
 
@@ -12,17 +42,6 @@
 声の種類というよりは、息の圧が高くなって、鼻までしっかり声が届いている状態。
 
 鼻濁音とかで鼻の方の気道を狭くして無理やり息の圧を高めてもヘッドボイスは出るけど、本当は気道を広くした方がよく響く。
-
-## 口に響かせる
-
-口の中も広い方がよく響く。
-軟口蓋を閉じる、頬や顎の力を抜く、口を開けすぎない、舌を平たくする、などの方法がある。
-
-## 喉に響かせる
-
-喉を下げる。
-
-低いところで音を鳴らさないとそこまでの声道の響きが損なわれる。
 
 ## その他
 
