--- a/shared/singing/tips/音程を合わせる.md
+++ b/shared/singing/tips/音程を合わせる.md
@@ -9,7 +9,7 @@
 練習は、一音を聞いて、一音を返す、の繰り返しが基本。
 
 1. 特定のピッチのbeep音を聞く
-2. 同じピッチでロングトーンを出す
+2. 同じピッチでロングトーンを出してチューナーで測る
 
 ロングトーンは入りから締めまで一定にして、しゃくったりフォールしたりしない。
 
