--- a/shared/mood/making/場を盛り上げる.md
+++ b/shared/mood/making/場を盛り上げる.md
@@ -165,3 +165,6 @@ engagement も役にたつ。
 前座は盛り上げすぎてもいけない。トリに向かって徐々に盛り上がるくらいでちょうどいい。
 
 盛り上げるのは空気というよりもノリかも。
+
+盛り上がらないのはいいけど、気まずくなるのはだめ。
+盛り上げるのはノリの問題で、気まずくなるのはムードの問題。
