--- a/shared/care/tips/情を示す.md
+++ b/shared/care/tips/情を示す.md
@@ -1,3 +1,14 @@
+## 伝えるべきメッセージ
+
+- あなたが特別だ
+- あなたが大切だ
+  - あなたを守る
+  - あなたを助ける
+    - 面倒を見る
+    - 責任を持つ
+
+## 具体的な行動
+
 - 関心を示す
   - 相手の話をよく聞く
   - 相手の話を覚えている
@@ -8,6 +19,8 @@
 - 好意を示す
   - 笑顔で明るく声をかける
 - 相手に合わせる
+
+## その他
 
 手間や時間をかけることで情を示す。
 
