--- a/shared/popular/advocacy/アンチ.md
+++ b/shared/popular/advocacy/アンチ.md
@@ -1,3 +1,5 @@
 アンチは敵対しているというよりもかまってちゃんなだけ。
 興味を持っていて、積極的に関わろうとする意味では、実質的にファンみたいなものだ。
 店としては食い物にするのが大事。
+
+人気を考えた時、アンチはどうでもいい。死んでもいい。なんの価値もない。敵対するなら殺す。
