--- a/shared/popular/advocacy/ファン.md
+++ b/shared/popular/advocacy/ファン.md
@@ -25,3 +25,5 @@
 アイドルは神であるべきなのに、神を見て育った世代の信者が入ってくると俗物になってしまう。偶像でなくなったアイドルのグループは長続きしない。
 
 Vtuberのファンとしては企業Vを辞めた人というか辞めて転生した人ともコラボしてほしい。あるいは元の姿でもいいし。
+
+どんな人気者も、まずは一人のファンを作るところから。
