--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -63,3 +63,6 @@
 
 余命を伝えたり、別れを切り出したりするとき、どうしても相手が受けるダメージを小さく抑える。
 そうするとどうなる？でもどうせ別れる人に気を使う必要ってあるのか？でも恨みを持つと別れてくれないかもしれない。付きまとわれるのを避けるために、ダメージを抑える。
+
+スルーも気遣いではある。
+無視とは違う。受け取って返事もするけど、「ははは」みたいに流す。
