--- a/shared/mood/場の空気.md
+++ b/shared/mood/場の空気.md
@@ -101,3 +101,6 @@
 会話のテンポが上がってノリが良くなっても、ムードが良いとは限らない。むしろ態度は雑になっていくと考えられる。
 
 空気が悪いと、動きづらい。話しづらい。
+
+態度の悪い人がいると、空気が悪くなる。
+周りの気分を良くするだけじゃなくて、態度を良くする。
