--- a/shared/sex/dating/恋人を探す.md
+++ b/shared/sex/dating/恋人を探す.md
@@ -12,3 +12,7 @@
 恋人がいるのに恋愛の話題を他の人に振るのは品がない。
 
 恋人を探す段階をdatingという。
+
+恋人になるためには、恋愛対象として見られないといけない。
+初めから下心はある程度見せておくべき。相手の容姿や服装のセンスを褒めるとか。
+ただし、下心を見せすぎて逃げられてはいけない。異性として意識させるけど、紳士的に振る舞う。異性として、親しくなる。
