--- a/shared/sex/恋.md
+++ b/shared/sex/恋.md
@@ -79,3 +79,7 @@ romance に集約してもいいかも。
 
 狩りに出ないなら、気遣いなどの種をまいてモテるようにならないといけない。
 モテないなら狩りに出ないといけない。
+
+恋愛の失敗パターンもあってもいいか。
+
+恋愛、という活動と、恋、という感覚は分けてもいいかも。
