--- a/shared/mood/気分が下がるとき.md
+++ b/shared/mood/気分が下がるとき.md
@@ -33,6 +33,10 @@
   - 尊重されていない
     - 遅刻された
   - 返答が遅い
+  - 話を聞いてない
+    - キョロキョロして落ち着かない
+    - 携帯を触る
+    - 話を覚えてない
 - どうせうまくいかないと感じる
 - 誰のためにもならないと感じる
 - 緊張している
