--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -10,6 +10,7 @@
 - 相手から大切にされていると感じる
   - 相手のために品のある言動を選ぶ
   - 相手のために身なりを整える
+  - 相手の話したことややったことを覚えている
 - 相手に理解されていると感じる
 - 安心する
 - 相手を信頼している
@@ -27,6 +28,7 @@
     - 会話のテンポを維持する
 - 楽しみを見つける
   - ごほうびを用意する
+- 相手に集中して話を聞く
 
 気分を上げる、機嫌をとる。
 
