--- a/shared/mood/態度.md
+++ b/shared/mood/態度.md
@@ -4,17 +4,10 @@
 
 相手が話しかけたいと思うような態度、話題、属性。
 
-## 良い態度
+## 態度の良し悪し
 
-自分と相手の気分が良くなる態度。
-相手の態度が良くなるのは特に良い態度。
-
-- 体を相手の方に向けて話を聞く
-
-## 悪い態度
-
-- キョロキョロして落ち着かない
-- 携帯を触ったりして話を聞いていない
+空気が良くなるのが良い態度。
+つまり、自分や周囲の気分が良くなり、態度が良くなる態度。
 
 ## その他
 
@@ -32,3 +25,5 @@
 そもそもどういう態度が良いものかわかってないと、気分が良くても態度が良くならない。むしろその振る舞いが良いと思ってうまくいかないこともある。教育が必要。「こうしてほしい」と具体的に伝えて反復させる。
 
 酔っ払うと態度が悪くなりやすいので、人前で過度に酔うべきではない。酒は飲んでも飲まれるな。
+
+ただ気分を上げるだけでなく、正しい態度がどういうものか伝えるのも大事。その場合も、気分は下げない。
