--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -1,4 +1,4 @@
-# Sex Appeal
+# Sexy
 
 時代や地域によっても差がある。
 
@@ -9,3 +9,24 @@
 あとは病弱だったりモテなかったりする人とは子供を作っても次の世代が続かないので避けられやすい。
 
 相手の性欲が刺激されること。惹きつけられること。
+
+性的魅力は健康な状態とも近い。
+
+性的魅力の特徴としては、自分の子供を産んで育てられること、子孫も子供が作れる（モテる）こと。
+
+- モテそう
+  - 顔がいい
+  - 金持ち
+    - 服が高そう
+    - 服飾品が高そう
+- 健康
+  - よく笑う
+  - 尻が大きい
+  - 胸が大きい
+  - 顔色がいい
+  - 肌つやがいい
+  - 鍛えられている
+  - 背が高い
+  - 痩せすぎていない
+
+性的興奮を感じるかどうか。
