--- a/shared/lifestyle/meal/栄養.md
+++ b/shared/lifestyle/meal/栄養.md
@@ -19,3 +19,10 @@
 記録するんじゃなくて、先に入力したら点数が出るので点数が上がるように計画を調整して食べる。
 
 プロテインは開封したら湿気で傷んだりするので早めに飲み切る。
+
+筋肉を維持するには1日に体重50kgあたり80gくらいのたんぱく質が必要。鶏胸肉なら350gくらい。
+
+一日の摂取エネルギーの20-30%くらいは脂質で取るべき。
+
+脂質と一口に言ってもその質は結構違う。
+古い油よりは新鮮な油の方がいい。ナッツとか、鮮魚とか、オリーブオイルとか。
