--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -10,10 +10,12 @@
 
 - 自分の態度を改める
 - 他人の気遣いに気づいて、感謝を伝える
-- 何度でも先に名乗る (相手が名前を忘れていても気まずくならないように)
 - 体調を気遣う
-- 誘いを断りやすくする
-  - 誘いを断っても嫌な顔をしない
+- (人を誘うとき)
+  - 誘いを断りやすくする
+    - 誘いを断っても嫌な顔をしない
+- (人と会ったとき)
+  - 毎回名乗る: 相手が名前を忘れていても気まずくならないように
 
 ## その他
 
