--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -369,3 +369,7 @@ https://x.com/ggnka_icha/status/1810274912759918858
 最低限の承認と近い。
 
 最低でも害さないこと。
+
+> 行き過ぎた冗談を本気にして高くなっている鼻をへし折ってやろうとする気持ちも、わからなくもない。
+> ――問題は、私が本当にできるという一点だ。
+> 『狂乱令嬢ニア・リストン』
