--- a/shared/war/tips/敗北を認めさせる.md
+++ b/shared/war/tips/敗北を認めさせる.md
@@ -1,3 +1,5 @@
 戦争はただ勝つだけでなく敗北を認めさせる必要がある。勝負とは違う。恐怖を与える。
 
 敗北を認めさせるということは、諦めてもう戦わないようにすること。
+
+負けを認めさせるのはあくまでも最終目標で、途中で目標に沿わない卑怯な手を使うこともある。でも決着の先延ばしに過ぎないことは覚えておかないといけない。
