--- a/shared/war/武力を示す.md
+++ b/shared/war/武力を示す.md
@@ -24,3 +24,5 @@
 卑怯な手段を使うと負けを認めさせるのが難しくなる場合がある。暗殺なんかも同じ。
 
 負けを認めさせないと泥沼になる。争いはない方がコスパがいい。
+
+状況によっては卑怯な手を使う場合もあるが、卑怯な手はあくまでも決着の先延ばしにしかならない。どうしても負けそうな時とか、使った方がいい時もある。
