--- a/shared/learning/tips/才能.md
+++ b/shared/learning/tips/才能.md
@@ -31,3 +31,7 @@
 才能は自分の好みと違うところに咲くことも多い。しかし、努力や学習は意図的に方向性を決められる。
 
 「才能がない」というのは、つまり「努力や工夫が足りない」という意味。
+
+才能は、能力と戦場が一致しないと意味がない。
+
+「十で神童 十五で才子 二十過ぎれば只の人」（芥川龍之介）
