--- a/shared/singing/歌の基本.md
+++ b/shared/singing/歌の基本.md
@@ -37,3 +37,6 @@ https://youtu.be/Q-nW_cP21Kg?si=oNWOOijeEqIjtweV
 歌うだけで精一杯だと、「聴かせよう」とする段階になっていない。まずは曲を覚えて、あまり意識を向けなくても歌えるようにする。意識は表現やその場の空気に向ける。
 
 横隔膜を下げて息を支えて、腹筋だけで息の強さを制御して、声帯の伸縮だけでピッチをコントロールすれば、声はレガートになる。
+
+まずはどんな曲でも地声で歌えるのが基礎。あとは裏声にするなり他に声色を変えるなり好きにすればいい。
+ただ、最高音がC5を超えるような歌は基本的に男性の地声で歌えないと思った方がいい。テノールのプロ歌手でもその辺りが上限。一般人ならB4あたりが目標か。曲が高すぎる場合はキーを下げる。
