--- a/shared/voice/声の支え.md
+++ b/shared/voice/声の支え.md
@@ -87,3 +87,5 @@ https://youtu.be/t9ikmatTX3w?si=o6IwfwS3eamhxzm-
 
 息を支えるとある程度息が強くしないと声が出ない。
 普通に腹式呼吸で息を支えると単純に出ていく息の量が減るので、息の量だけで発声していると声にならない。
+
+息の支えが足りないと雑音の多い太い声になる。強くて重い声にしても、細く保つべき。
