--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -184,3 +184,9 @@ Lose-WinをLose-Loseに持ち込む。
 争いと戦いは区別する。ConflictとBattleかな。
 
 暗殺はコスパがいい。
+
+戦争や勝負では限界まで振り絞る練習が必要。
+
+商売で限界まで振り絞るのはバカがやることだ。商売は勝利を目指すものではなく、独占を目指すものだ。
+
+本当に頂点で勝つには限界まで振り絞るしかない。きつい思いをせずに勝つことはできない。
