--- a/shared/mood/vibe/ノリ.md
+++ b/shared/mood/vibe/ノリ.md
@@ -17,3 +17,5 @@
 勢いがある時は勢いを止めない方が力をうまく使える。ただ、力が強くても向きが悪いとむしろ悪い方に向かってしまうこともあるし、止まりきれずに崖から落ちることもある。
 
 ノリよりもムードを重視する。
+
+ノリに関しては音楽と関連する部分がある。テンポが速くて抑揚が大きいほうがノリが良い。
