--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -162,3 +162,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 「蛙化」というのは、単純に社交をサボっているだけ。普通は感謝や不満を伝えることで嫌なところも擦り合わせていくもの。直してくれたり、それに合わせて自分もある程度妥協したりすることで、関係を長く続けられる。 最近の若い子が単純に底が浅くて人間関係を続けられないだけ。
 
 社交は別に相手への好意で続けるわけではない。とにかく人と関わる。仕事とか近所付き合いとか、仕方なくやる。
+
+あまり張り切って人付き合いしようとすると疲れてしまう。
+楽に続けられる工夫は大事。
