--- a/shared/risk/lucky/timing/タイミング.md
+++ b/shared/risk/lucky/timing/タイミング.md
@@ -6,3 +6,5 @@
 
 成功する確率が高いタイミングで実行するのと、回数を増やすのと、両方必要。
 待ちすぎて回数が減るのは良くない。
+
+中国の占い、易学の基本は「とき」を掴むこと。タイミングを見極めて、それに合わせた対処をする。64の「とき」に分けられている。八卦は易学が由来。
