--- a/shared/sleep/tips/日中の眠気対策.md
+++ b/shared/sleep/tips/日中の眠気対策.md
@@ -15,3 +15,6 @@
 
 顎を上げずに天井を見て10-15秒キープする。
 https://x.com/lenon_up/status/1844696643637317737
+
+カフェインはそれ自体が興奮作用を持つわけじゃなくて、アドレナリンが出ることで興奮する。
+カフェインは受容体を塞いで眠気の原因物質を止めるが、それ自体は無くならないので、カフェインが切れると一気に眠気がくる。
