--- a/shared/voice/training/tips/顎を動かさない.md
+++ b/shared/voice/training/tips/顎を動かさない.md
@@ -1,2 +1,7 @@
 唇（表情筋）や舌の動きが悪いと、発音を補助するために顎を動かす癖がつく。
 まずは口を大きく開けたまま、唇と舌だけで発音を変える練習をするといい。
+
+https://youtube.com/watch?v=4KGp12BZ5Z4&si=xD_5og4IIoJ9E90R
+
+顎が力まないようにする練習としては、割り箸をくわえて地声の高音を出す練習がある。太めのストローもいいと思う。
+口は「い」だけど、音は「い」ではなく、「u」で発声する。
