--- a/shared/people/人の要素.md
+++ b/shared/people/人の要素.md
@@ -53,3 +53,15 @@
   - 活躍した
   - 成功した
   - 失敗した
+- 欲
+- 感情
+- 価値観
+  - 何に怒るか
+  - 何に喜ぶか
+- 熱意
+- 知識
+- 経験
+- 意図
+- 習慣や癖
+
+人の情報を得ることは、予測可能性や信頼性につながる。
