--- a/shared/trust/素直さ.md
+++ b/shared/trust/素直さ.md
@@ -16,3 +16,6 @@
 その上で、和を乱さないようにするには、表現を工夫する。ウィットやユーモアも怒りを直接的に表現しないようにしていると考えられる。
 
 緊張して手が震えて、っていうのをそのまま表現できるのが素直ということ。素直に表現するには語彙力が必要。
+
+素直さというのは、早くやること。
+素直に気持ちを伝えるというのは、早く気持ちを伝える。後回しにしない。
