--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -34,3 +34,8 @@
 - 筋肉がついている
 - 脂肪が適度についている
 - よく笑っている
+
+相手に興味が持てない場合でも、興味が持てるようになるまで掘り下げる。
+逆にいうと、自分がどういうところに興味を持つのかあらかじめ考えておかないといけない。それに向かって質問する。
+
+まぁ、相手を掘り下げた上でつまらない、興味がないということもある。
