--- a/shared/community/コミュニティ.md
+++ b/shared/community/コミュニティ.md
@@ -153,3 +153,10 @@ business と対立する概念。
 コミュニティとエンゲージメントは関係が深い。エンゲージメントが生じるのは、相手の利益が自分の利益になるからだ。
 
 コミュニティを作りたかったら、メンバーには余裕がないといけない。貧乏人は他人に気を遣う余裕もない。
+
+コミュニティの例。
+
+- 家庭
+- 職場
+- 部活
+- 趣味の集まりや社会人サークル
