--- a/shared/influence/people/人を変える.md
+++ b/shared/influence/people/人を変える.md
@@ -7,3 +7,7 @@
 
 何かを変えるより、まずはできていることに目を向けさせる。
 勇気を与えるのが先。
+
+相手を変えるために社会性の動物に備わっているのが喜びと怒りの感情。
+ただ、現代では怒りの感情をそのまま発するのは卑しいこととされて、社会的に排除される場合が多い。もっというと軽視されてむしろ逆効果になりやすい。
+感情としては喜びや怒りであっても、相手がこちらの要望を聞き入れて行動を変えてくれるような形で表現するのが大事。
