--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -4,15 +4,30 @@
 
 ## Good
 
+- 目を合わせる
+- 目を離さない
 - 名前を呼ぶ
 - ノリ、テンションを合わせる
+- 話を聞く
+- 話を覚えている
+- 微笑みかける
+- 相槌を打つ
 - 大げさにリアクションする
+- 話を遮らない
 - 話の続きを促す
+  - 詳しく教えてもらう
   - 詳しく質問する
+  - 話をまとめない
+- 話の重要な部分で大きく反応する
+- 体ごと相手に向ける
 - 相手を観察して、思ったことを伝える
 - 変化に気づく
   - 相手の言動を覚えておく
   - 前に会った時と変わったところを指摘する
+- 質問して話を誘導しない（言いたいことがわからない時は質問していい）
+- わからないまま終わらせない
+- 相手を模倣する
+- 相手の表情と合わせる
 
 ## Bad
 
@@ -20,10 +35,10 @@
 - 無反応
 - 携帯を触る
 - キョロキョロする
-- 「これどうなった？」と聞く
+- 無責任に「がんばれ」という
+- 放ったらかしておいて「これどうなった？」と聞く
 - 頻繁に話を変える
-- 手間や時間を惜しむ
-- 評価を示す
+- 手を抜く、手間や時間を惜しむ
 
 「これどうなった？」って聞くのは無関心の証。見てないからこそ出てくる台詞だ。
 「これこうなってるけど大丈夫そう？」と聞かないといけない。
@@ -63,3 +78,5 @@
 
 関心を示すことに恐れを抱く人もいる。
 目立ちたくないとか、男嫌い、女嫌いとか。
+
+関心ではあるけど、敬意を示してないのはよくない。
