--- a/shared/intimacy/親しさ.md
+++ b/shared/intimacy/親しさ.md
@@ -192,3 +192,6 @@ intimacyは基本的に恋人に対して使われる表現で、友人にはあ
 相手の好みを知って店選びやプレゼントが変わったり、地元が同じならこちらも方言を使ったりする。
 
 仲が良いのと親しいのは同じ？
+
+誰とでも親しくすると手間が増えて面倒なので、ちゃんと面倒を見きれる人とだけ親しくする。
+情がないのに親しくしてもしょうがない。
