--- a/shared/respect/尊重を示す.md
+++ b/shared/respect/尊重を示す.md
@@ -25,6 +25,7 @@
 - 相手を待たせたことに配慮する、詫びる
 - 相手の話をする、相手の話を聞く
 - 主観もまたある種の事実として扱う
+- 気を遣う
 
 尊重を示すためには、まず無視しないこと。反応を返すこと。できれば言葉だけじゃなくて、上着を着たり震えたりしてたら「寒いの？」とか、くしゃみしたら「Bless you」とか、関心を示すといい。
 
@@ -65,6 +66,10 @@
 - 舐めた態度を取る
 - 話を遮る
 - 相手を評価する
+- 評価する
+- 比較する
+- 助言する
+- 口出しする
 
 愛想が悪いのは、「あなたは重要ではない、気をつける相手ではない」というメッセージになる。
 
