--- a/shared/story/tips/好きな物語を語る.md
+++ b/shared/story/tips/好きな物語を語る.md
@@ -1,6 +1,10 @@
-- 好きな話は？
-- 好きな台詞は？
-- 好きな登場人物は？
+- あらすじ
+- 盛り上がるところ
+- 好きな話
+- 好きな台詞
+- 好きな登場人物
 - (シリーズもの)
-  - 好きな長編は？
-  - 好きな巻は？
+  - 好きな長編
+  - 好きな巻
+
+ネタバレをどこまで語るべきか。
