--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -69,3 +69,7 @@
 
 スルーも気遣いではある。
 無視とは違う。受け取って返事もするけど、「ははは」みたいに流す。
+
+気遣いは、限られた人にだけ向けるもの。
+誰も彼もとやってると大変。
+ただ、複数人で集まる場では大切な人以外にも気を遣って、その場全体の空気をよくするのが大切な人のためにもなるし、自分のためにもなる。
