--- a/shared/technique/ジェネラリストとスペシャリスト.md
+++ b/shared/technique/ジェネラリストとスペシャリスト.md
@@ -17,3 +17,7 @@ expert, professional, special
 幅広い経験を持つのも重要だが、特定の専門分野、誰にも負けないものにするには特化した方が有利。
 
 専門家は選択肢をたくさん持ってこそ。一つに特化するだけなら素人でもできる。広く深く。
+
+専門分野の中でさらに「スペシャリスト」を名乗るのは欠点を誤魔化す言い訳でしかない。
+まずその分野はなんでも知っていて、その上で得意な領域があるのが本物の専門家。
+例えばオペラ歌手であればバッハしか声に合わなくて歌えないのではなくて、なんでも歌えるけどバッハが得意なのが本当の専門家。
