--- a/shared/voice/training/tips/声量を上げる.md
+++ b/shared/voice/training/tips/声量を上げる.md
@@ -7,3 +7,6 @@ https://youtu.be/MfYo2SQlaUk?si=mE-o_WCY1JFrisP0
 でかい声を出すのに息の量は必要ない。カラスでもバカでかい声で鳴く。
 
 声量を変えようと思ってないのに不安定なのは楽器としての自分をキープできてない。
+
+オーケストラにかき消されて声が聞こえないのは観客にとって不満につながる。
+https://youtu.be/v6k2WDtYEgA?si=xxtENB8waYICEoHm
