--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -19,3 +19,6 @@
 
 給与はある程度まで幸福度に直結する。
 他人の倍くらい稼げるとあとは横ばいではあるけど、自分を高く評価してくれる職場＝給料が高い職場で働いた方が幸福になりやすい。
+
+幸せになるには、一つ一つの確率を少しでも上げていくしかない。
+10%を11%にする努力が幸せにつながる。
