--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -39,3 +39,10 @@
 逆にいうと、自分がどういうところに興味を持つのかあらかじめ考えておかないといけない。それに向かって質問する。
 
 まぁ、相手を掘り下げた上でつまらない、興味がないということもある。
+
+まず相手に興味があるふりをするところから始める。好きなフリから始めて、好きなところを探さないと、好きになれない。人を愛せ。
+
+相手を掘り下げる前に、そもそも自分がどういう人を好むのか考えておかないと、どういう話を聞けばいいかわからない。
+
+- どんな人が好きか
+- どんな人に興味があるか
