--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -970,3 +970,7 @@ loveとgoodの概念は近い。
 愛に理解が伴うとは限らない。誤解されている場合もよくある。
 
 承認は愛かどうか。respectとどう違うか。
+
+愛は熱意なのかも。
+
+好感や好意は感情的なものだけど、愛は行為。理性的に「やる」か「やらない」か選ぶもの。人を愛するかどうかを。
