--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -61,3 +61,10 @@
 緊張とか、不安とか。
 
 冷たい体を温める機会がある分、秋冬はチャンスかも。
+
+気後れさせないのも大事。
+高すぎるプレゼントとか、重すぎる気遣いとかは、むしろ相手を気後れさせる。
+
+気分を上げるということは、幸せにするということ。
+
+人は、気分を良くしてくれる人、幸せにしてくれる人を求める。
