--- a/shared/popular/advocacy/ファン.md
+++ b/shared/popular/advocacy/ファン.md
@@ -27,3 +27,5 @@
 Vtuberのファンとしては企業Vを辞めた人というか辞めて転生した人ともコラボしてほしい。あるいは元の姿でもいいし。
 
 どんな人気者も、まずは一人のファンを作るところから。
+
+ファンは憧れであって、親しくなりたいとは限らない。配信者とか芸能人とかも遠くで見てたら面白いけど性格破綻してそうな人もいるし。
