--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -111,3 +111,5 @@
 
 同性同士はパートナーであっても恋人とは言えないのかも。
 逆に、恋人であってもパートナーではなくペットになることはある。お金も稼がないし子供とも全く関わらないってことはまずないけど。
+
+恋人と、気になる人、交際相手、恋愛対象、は違う。デートしてるのはまだ恋人ではない。
