--- a/shared/trust/警戒をとく.md
+++ b/shared/trust/警戒をとく.md
@@ -122,3 +122,7 @@ https://diamond.jp/articles/-/118539
 情報を隠すと怪しい。
 
 女性相手は特に、態度より前に身だしなみとか見た目の部分が重要かも。
+
+自分のことに軽く触れてから相手のことを聞くと警戒されにくい。
+
+どうして話しかけたかを伝えると警戒されにくい。
