--- a/shared/hope/希望.md
+++ b/shared/hope/希望.md
@@ -1,11 +1,13 @@
-# 希望
+# Hope
+
+希望、欲望、願望。
 
 何かを楽しむということは、人生に希望を持つということ。
 
 見せしめ、気晴らし、憂さ晴らし、正義ごっこ、など闇の娯楽もある。
 誰かを罰することで、「平和が保たれる」という希望を得られる。
 
-「死に至らない病」とも言われる。
+絶望、「死に至る病」にかけて、「死に至らない病」とも言われる。
 
 パンドラの箱に最後に残ったもの。
 
@@ -51,3 +53,7 @@ Hope, 希望と絶望
 希望が正しいかどうかはどうでもいい。
 
 人に希望を与えるのが英雄。
+
+やりたいこと、
+欲しいもの、
+やってほしいこと、
