--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -972,5 +972,11 @@ loveとgoodの概念は近い。
 承認は愛かどうか。respectとどう違うか。
 
 愛は熱意なのかも。
+愛を示して、熱を伝える。
 
 好感や好意は感情的なものだけど、愛は行為。理性的に「やる」か「やらない」か選ぶもの。人を愛するかどうかを。
+
+愛は冷める。
+意識的に続けないと興味がなくなっていく。好きなところを探さなくなっていく。
+
+好きなところを探すのが愛なのかも。
