--- a/shared/execution/prompt/指示.md
+++ b/shared/execution/prompt/指示.md
@@ -78,3 +78,5 @@ https://www.nikkei.com/article/DGXZQOUD198KF0Z11C24A2000000/?n_cid=SNSTW005
 人によって違うのがコンピュータよりも面倒。でもコンピュータよりは雑な命令でも伝わる。
 
 考え方を具体的に指示することでより精度の高い作業ができる。
+
+指示や指摘は「自分が」相手にそうしてほしいのであって、世間や第三者に責任をなすりつけてはいけない。
