--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -5,12 +5,15 @@
 
 近付いて、何もしない。害を与えられない、という体験の繰り返しが重要。
 
+親しくなる前に、親しげに接する。
+
 1. 相手を好きになる
 2. 興味を持ってもらう
 3. 知ってもらう、覚えてもらう
    1. 接触の機会を増やす
 4. 好きになってもらう（相手からも近づいてもらう）
-5. 親しくなる
+5. 親しげに接する
+6. 親しくなる
 
 ## その他
 
@@ -233,3 +236,8 @@ https://www.total-marriage.com/column/1644/
 
 肉体的に近づく。
 精神的に近づく。
+
+相手に近づくためには、サルの毛繕いに当たる活動が必要。相手に近づいた上で害がないことを示す。
+
+距離は少しずつ縮めないといけない。
+親しくなりたい人に、今の距離感より一歩だけ踏み込むのが大事。
