--- a/shared/mood/happy/幸福感.md
+++ b/shared/mood/happy/幸福感.md
@@ -6,5 +6,19 @@
 幸せはゴールじゃないけど、気分が悪いよりは、良い気分で生きれたほうがいい。
 
 幸せはむしろスタート。
+重要なのは幸せになって何をするか。
+日光を浴びて気持ちよくなったから散歩するのと同じ。
 
 不幸になるとなかなか抜け出せない。気分が悪くて、気力がない。動きたくない。動けないのが不幸。
+
+不幸を理由に動かないと不幸なまま。
+
+不幸はできるだけ避けて、気持ちよく過ごせるように健康や福祉を整えないといけない。
+
+幸せな人はもっと幸せに、不幸な人はもっと不幸になる。
+
+少なくとも自認は幸せでないといけない。
+不幸なままでは現実に向き合えない。
+
+自分が幸せだと思って、動き出せるかどうか。
+ただ、幸せだと思っていても動かずに死んでいくなら同じことだ。
