--- a/shared/mood/making/気分を落とさない.md
+++ b/shared/mood/making/気分を落とさない.md
@@ -1,3 +1,7 @@
 どうしたら機嫌が悪くなるか、を考えて、避ける。
 
 - 相手の顔を立てる、恥をかかせない
+- はっきりと聞き取れるように話す
+
+声が小さい、低いのは聞き取りづらい。
+聞き返さないといけないとテンポが悪くて気持ちよく話せないし、スルーしても「なんだったんだろ」ってもやもやする。
