--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -128,3 +128,7 @@
 共感というのは、単に相手が考えていること、感じたことを口にすること。
 
 共感というのは、単に相手の話の重要な部分に相槌を打つことなのかも。何が重要かを判断しないといけない。
+
+「楽しそう」とか、「緊張しなかった？」みたいに相手の感情を当てようとするのが大事。
+できれば当たった方がいいけど、違ってもそれはそれで感情の掘り下げができる。
+「相手を理解しているように見せる」の一環かも。
