--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -380,3 +380,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 長く続けないといけない練習と、テクニックのために一時的にやる練習がある。
 重要度が高いのは長く続けないといけない練習。
+
+技術は意識しなくてもできるくらいまで練習が必要。手段でしかない。最初は使う技術を絞るのも大事。
