--- a/shared/trust/警戒をとく.md
+++ b/shared/trust/警戒をとく.md
@@ -126,3 +126,4 @@ https://diamond.jp/articles/-/118539
 自分のことに軽く触れてから相手のことを聞くと警戒されにくい。
 
 どうして話しかけたかを伝えると警戒されにくい。
+行列に並んでる人に「これってどうして並んでるんですか？」って聞くのは目的が明らかで、暗黙的に目的がわかっている。
