--- a/shared/production/生産性.md
+++ b/shared/production/生産性.md
@@ -43,3 +43,5 @@ achievement について知らないといけない。
 根本的に生物には生産性がないのが普通なので、生産性が少しでもあったら自分を誇っていい。生産性がなくても罪悪感を持たなくていい。
 
 生産性がなくてもやるべきことはある。復讐だったり、息抜きだったり。心の澱みを取ることで、結果的に生産性につながることもある。
+
+人間は生産のために生きているわけではない。経済の奴隷ではない。効率や生産性ばかりを気にしてはいけない。
