--- a/shared/intimacy/距離感.md
+++ b/shared/intimacy/距離感.md
@@ -67,3 +67,5 @@
 距離は結構重要な概念。時間とも空間とも関連する。
 
 元々距離感が近い人でも、好かれないと近付いてこない。
+
+距離感はまず遠い方がまだ良くて、いきなり近づきすぎると警戒される。でも親しくなるには、ギリギリまで近づくのが大事。近づいた上で害がないことを示さないといけない。
