--- a/shared/mood/態度.md
+++ b/shared/mood/態度.md
@@ -27,3 +27,5 @@
 酔っ払うと態度が悪くなりやすいので、人前で過度に酔うべきではない。酒は飲んでも飲まれるな。
 
 ただ気分を上げるだけでなく、正しい態度がどういうものか伝えるのも大事。その場合も、気分は下げない。
+
+仲の良い友人や恋人の、他人への態度は、10年後のあなたへの態度だ。
