--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -165,3 +165,11 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 あまり張り切って人付き合いしようとすると疲れてしまう。
 楽に続けられる工夫は大事。
+
+他人との関係で大事なこと:
+
+- 否定しない
+- 評価しない
+- 誰かと比較しない
+
+比較というのは評価の前段階で、結果的には評価していることになる。
