--- a/shared/voice/training/tips/声量を上げる.md
+++ b/shared/voice/training/tips/声量を上げる.md
@@ -10,3 +10,7 @@ https://youtu.be/MfYo2SQlaUk?si=mE-o_WCY1JFrisP0
 
 オーケストラにかき消されて声が聞こえないのは観客にとって不満につながる。
 https://youtu.be/v6k2WDtYEgA?si=xxtENB8waYICEoHm
+
+声量に大きすぎるということはない。でも「うるさい」のはだめ。声量が大きいのではなく、響きが悪い。
+
+声量として、最低でも伴奏に負けてはいけない。
