--- a/shared/engagement/エンゲージメントが低い兆候.md
+++ b/shared/engagement/エンゲージメントが低い兆候.md
@@ -1,20 +1,24 @@
 - 欠勤や遅刻が増える
-- ミスが増える
-- 丁寧さがなくなる
-- 納期を守れなくなる
-- ケチになる
-- 自己防衛に回る
-- 責任を回避する
+- 手間を惜しむ
+  - ミスが増える
+  - 丁寧さがなくなる
+  - 納期を守れなくなる
+  - ケチになる
+  - 積極性が失われる
+  - 自己防衛に回る
+  - 責任を回避する
+  - 創造性が失われる
+  - 成果を隠す
 - 雰囲気が悪い
 - 秘密が多い、一部の人で話して決めることが多い
-- 「私たち」「うちのチーム・会社」といった言葉を使わなくなる
+- 相手と切り離した言動が増える
+  - 「私たち」「うちのチーム・会社」といった言葉を使わなくなる
 - 退職する、または退職したいと周りに言う
-- 積極性が失われる
+- 前は相談していたのに頻度が減る
 - 上司や同僚とのコミュニケーションが減る
 - ネガティブな言葉が増える
 - ストレスで体調を崩す
 - 顧客からのクレームが増える
-- 創造性が失われる
 
 エンゲージメントが低いのはその人が悪いのではなくて、組織やチームに価値を感じなくなって、そのために自分から何かしようとすることもなくなっているだけ。
 
@@ -35,3 +39,7 @@ https://x.com/sa_hayakawa/status/1815558585637884307?s=46
 結局、エンゲージメントが低いと仕事をサボるようになるからパフォーマンスが落ちる。全力を出さなくなる。
 
 エンゲージメントが高い兆候としては、所属する集団を褒められると自分も嬉しい、所属する集団を貶されると不快、など。
+
+会社や知人に期待しなくなったり、自分と切り離した言動が増えたりするともう離れる合図。諦められている。
+
+他人事になっているとも言える。
