--- a/shared/music/tips/リズム感を鍛える.md
+++ b/shared/music/tips/リズム感を鍛える.md
@@ -130,3 +130,5 @@ BPM 60に慣れたら90, 120と増やしていく。
 慣れたら表拍と裏拍が混ざったさらに複雑なテンポで取る。
 
 声や楽器でもリズムを取る練習をする。手拍子とはまた違う。例えば声なら息継ぎが必要。
+
+スマホのメトロノームだと裏拍を鳴らせたりするけど、リズム練習のときは表拍だけ鳴らす。
