--- a/shared/sex/恋の話題.md
+++ b/shared/sex/恋の話題.md
@@ -10,6 +10,9 @@
 - もし恋人だったら嫌なところ
 - セクシーだと思う人は？
 - 男女間の友情はあると思うか
+- (恋人や恋愛対象がいるなら)
+  - 相手との出会いは？
+  - 相手の好きなところは？
 
 同性同士の恋バナなんかは、お互いに恋人が欲しいっていう愚痴みたいなものかも。
 恋人がいる人の惚気は仲のいい友達くらいしか聞きたくない。
