--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -277,3 +277,5 @@ engagement とも関係が深い。
 social communicationというと企業などから社会に向けた、1:Nのコミュニケーション。不特定多数に対して発信するメッセージ。
 
 - どういう情報をやりとりするか
+
+一番わかりやすい説明は、相手の持っている語彙だけ使った説明。
