--- a/shared/love/好き.md
+++ b/shared/love/好き.md
@@ -85,3 +85,8 @@
 好きにも近づきたい好きと遠くから眺めていたい憧れがある。
 
 好き嫌いを決めるのは、感覚的な部分も大きい。なんとなくダメ、というか、総合的に見てダメ、みたいな。
+
+- 類似性: 自分と似たところに惹かれる
+- 相補性: 自分にないところに惹かれる
+
+価値観やライフスタイルは似ているほどいい。
