--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -69,3 +69,7 @@
 気分を上げるということは、幸せにするということ。
 
 人は、気分を良くしてくれる人、幸せにしてくれる人を求める。
+
+自分の気分がいいことを相手に示すのも気分がいい。良い態度。笑ったり、褒めたり。
+
+人の気分を良くしたり悪くしたりというのも、相手をコントロールしている。
