--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -279,3 +279,7 @@ social communicationというと企業などから社会に向けた、1:Nのコ
 - どういう情報をやりとりするか
 
 一番わかりやすい説明は、相手の持っている語彙だけ使った説明。
+
+言語以外のコミュニケーションでも、相手がそれを理解できないと伝わらない。
+愛情を示したり、感情を示したりするのも同じ。
+相手のことを文化的でないサルと断ずる前に、お互いに教え合うのが大事。
