--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -83,3 +83,5 @@ https://x.com/shiroku__mama/status/1963543241292136671?s=12
 子が弱いから殺す、というのは自然ではないが、子育てを放棄することはある。弱かったら自然と死ぬだけで、育児放棄は子に割くリソースを抑えて親や他の子どもが生き残るため。
 
 子供には「頼られるのが気持ちいい」という感覚を育てるべき。社交やビジネスに対する適性。
+
+親二人だけでは育児の負担が大きすぎるので、工夫が必要。特に、幼児の安全性を容易に確保することができれば、目を離せる。
