--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -48,3 +48,7 @@
 - どんな人に興味があるか
 
 人の好みを把握しておくことで、相手のどういうところを掘り下げれば好きになれるかを考える。
+
+良いところを探すためには、詳しく知らないといけない。だから愛は「深さ」で測る。
+
+何かを好きになるには、それが好きなふり、興味があるふりをして、まずはよく知ってみるのが大事。
