--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -979,4 +979,8 @@ loveとgoodの概念は近い。
 愛は冷める。
 意識的に続けないと興味がなくなっていく。好きなところを探さなくなっていく。
 
-好きなところを探すのが愛なのかも。
+良いところ、好きなところを見つけようとする行為そのものが愛なのかも。
+
+良いところ、好きなところは好きな根拠であって、好きが先にある。
+
+良いところがあるから好きになるのではなくて、好きだから良いところを見つけられる。
