--- a/shared/health/exercise/tips/体力をつける.md
+++ b/shared/health/exercise/tips/体力をつける.md
@@ -36,3 +36,6 @@ https://x.com/gomihitomi/status/1967427964758593829
 集団で縦に並んでランニングしながら、最後尾になったら先頭までダッシュする。
 
 体力をつけるための体力がなければ、まず日光浴から始める。こまめに水を取りながら日光に当たる。
+
+体力は足腰と心肺から。
+スクワット、ランジ (前後に足を開くスクワット)、プランク、リバースプランク、あたりが基本。
