--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -73,3 +73,19 @@
 自分の気分がいいことを相手に示すのも気分がいい。良い態度。笑ったり、褒めたり。
 
 人の気分を良くしたり悪くしたりというのも、相手をコントロールしている。
+
+先回りして何かしてもらうと嬉しい。黙ってごみを捨てておくとか、好きなものを買ってくるとか。
+先回りというよりは、基本的に先にやっておくほうが相手の気分が落ち込んだときとかに重ねやすいからかも。
+
+気分を良くするというのは、単に喜ばせるといってもいいか。
+
+- 笑顔で楽しい話をする
+- 前向きな言葉で励ます
+- 褒める
+- 素直に気持ちを伝える
+- 否定形よりも肯定形を使う
+- 否定的な言葉を肯定的に言い換える
+- 愛情を伝える
+- 丁寧に時間をかける
+- 上から目線ではなく、お願いする
+- 相手のせいではないことを強調する
