--- a/shared/education/教育.md
+++ b/shared/education/教育.md
@@ -67,3 +67,5 @@ Study と比べると、体系的に学ぶのが基本。
 診療所や学校などの慈善事業を布教活動として行うことがある。
 
 教育の最初期はまず楽しませること、あるいは自発的に楽しめるようにすることを考える。続けられることが最優先。続けていれば効率が悪くてもそれなりにはなる。まぁ、対戦ゲームなんかではあまりにも進みが遅いと勝てなくて辞めてしまうこともあるので、慣れてきたらある程度効率も求めたい。
+
+暗黙的と言うか、仕組みが大っぴらになっていないことに趣があるというか、お互いにテクニックの部分を意識しない方がうまくいく技術もある。コミュニケーションもそう。だから、学校などで公的に教える分野ではないけど、こっそり教えた方がいい、みたいな知識は割とある。
