--- a/shared/music/vocal/歌手.md
+++ b/shared/music/vocal/歌手.md
@@ -29,3 +29,16 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 でも作曲しないのに歌が二流三流だったら誰かに聴かせるものとしては価値が低い。
 
 感動する声でなくても曲の歌詞やメロディで感動することはある。特にポップスみたいな楽しい感じの曲はリズムだけでも楽しく感じられるものがある。
+
+歌手の強み:
+
+- 地声
+- 説得力
+- 表現力
+- 抑揚
+- フレーズに合った声色の使い分け
+- リズム感
+- 複雑なリズムへの対応力
+- 走りや溜めの使い方
+- 作詞
+- 作曲
