--- a/shared/popular/人に好かれる.md
+++ b/shared/popular/人に好かれる.md
@@ -26,3 +26,7 @@
 人との接触にはコストがかかるので、そもそもなんらかの利がある人じゃないと付き合わない。
 
 基本的には、かわいいか、かっこいいか。
+
+好かれることは、選ばれること。
+
+身なりを綺麗にして礼儀をよくした上で、なんとなく嫌い、なんとなく苦手、を解消するのは難しい。最低限清潔であるべきではあるが、それ以外の部分は好みでしかない。
