--- a/shared/society/個性.md
+++ b/shared/society/個性.md
@@ -37,3 +37,5 @@
 個性というのは卓越したものを指すのであって、底辺プレイヤーに個性とかないし、いらない。まずは基本的な動きができるようになってから考えることだ。
 
 個性があると言うことは、印象に残りやすい、忘れにくい、と言うこと。
+
+社交に個性は必要ないけど、親交には必要。相手から選ばれないといけない。
