--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -275,3 +275,7 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 細くて強い息が使えるようになったら、自然と喉は締まらなくなる。喉を締めなくても声が出るのに慣れてくる。
 
 喉が締まるのは喉の奥が狭くなっていて、それとは別に声帯に力が入って硬くなる問題もある。
+
+あくびみたいな声になるのは舌や顎で喉を下げてるから。喉は首で下げて、舌や顎には力を入れない。
+
+あくびのフォームで声を高くするのを試して、このような感覚で高くするのは避ける。舌や顎で喉を下げると喉の奥が狭くなって響きが悪い。
