--- a/shared/human/body/muscle/training/筋トレ.md
+++ b/shared/human/body/muscle/training/筋トレ.md
@@ -21,3 +21,5 @@
 
 https://x.com/adez34112675/status/2008695078970437961?s=12
 https://x.com/isozaki_ryota/status/2008282357720379730?s=12
+
+筋トレはその日その日の負荷を記録するというよりは、最大を記録するのが楽。少しずつ負荷を上げていく。
