--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -241,3 +241,7 @@ https://www.total-marriage.com/column/1644/
 
 距離は少しずつ縮めないといけない。
 親しくなりたい人に、今の距離感より一歩だけ踏み込むのが大事。
+
+相手が引いてるのにこっちばっかり押しては迷惑。
+グイグイ行く前に、相手が引かないようにするべき。手順が違う。
+ただ、狩猟として考えると逃げる獲物を追うのは普通のことではある。微妙なところ。
