--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -73,3 +73,8 @@
 気遣いは、限られた人にだけ向けるもの。
 誰も彼もとやってると大変。
 ただ、複数人で集まる場では大切な人以外にも気を遣って、その場全体の空気をよくするのが大切な人のためにもなるし、自分のためにもなる。
+
+嘘は手間がかかるけど、むしろそれこそが気遣い。
+
+自分にとっては嘘をつかない方が楽なのに嘘をつくのは気遣いである。
+浮気とかは自分のためだけど、相手の話を知らないふりするのはそうではない。「知ってるよ。」の方が楽。でも相手の気分を上げるために嘘をついている。
