--- a/shared/society/tips/不満を伝える.md
+++ b/shared/society/tips/不満を伝える.md
@@ -9,3 +9,5 @@
 人を注意するときは「こうすべき」ではなくて「こうしてほしい」とあくまでも自分のわがままであることを自覚する。
 
 危険度の高い行動をとっている子どもに対して怒鳴って止めた場合、「大きな声出してごめん。危なかったから。」と謝る。
+
+「こうしたい」「こうしてほしい」を伝えるのは大事。
