--- a/shared/game/tips/詰みを逃さない.md
+++ b/shared/game/tips/詰みを逃さない.md
@@ -1,4 +1,4 @@
 詰みを逃さないためには、そのゲームで判断に使える時間で詰みを見つけないといけない。
 格闘ゲームなんかはすごい速さで状況が変わっていくので、詰みがあっても逃すことが多い。
 
-具体的な詰み状況をたくさん覚えてパターンマッチできると、早くて正確に判断できる。でも全部は覚えきれない。
+具体的な詰み状況をたくさん覚えてパターンマッチできると、早くて正確に判断できる。でも全部は覚えきれない。ある程度抽象化が必要。
