--- a/shared/engagement/praise/褒める.md
+++ b/shared/engagement/praise/褒める.md
@@ -120,3 +120,11 @@ pleasure.
 相手を褒めるときは、それで自分が得たものや学んだことを伝えると根拠になる。自分がどう嬉しかったかを伝える。
 
 ステータスを褒めるよりも、本人を褒める。人柄や性格、行いを褒める。
+
+元々持っているものよりも、工夫を褒める。
+
+他人と比べるより、過去のその人と比べる。
+
+陰でも褒める。
+
+褒めるだけじゃなくて、質問で掘り下げる。
