--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -52,3 +52,20 @@
 良いところを探すためには、詳しく知らないといけない。だから愛は「深さ」で測る。
 
 何かを好きになるには、それが好きなふり、興味があるふりをして、まずはよく知ってみるのが大事。
+
+何を見るか。
+
+- 言動
+- 価値観やこだわり
+- 能力
+- 外見
+  - 肉体
+  - 服装
+- 健康
+- ステータス
+  - 財産
+  - 人間関係
+    - 友人
+    - 恋人
+    - 職場の上司や友人
+    - 家族
