--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -132,3 +132,5 @@
 「楽しそう」とか、「緊張しなかった？」みたいに相手の感情を当てようとするのが大事。
 できれば当たった方がいいけど、違ってもそれはそれで感情の掘り下げができる。
 「相手を理解しているように見せる」の一環かも。
+
+共感は、似ていると親近感を覚えやすい、の一部かも。
