--- a/shared/care/人を大切にする.md
+++ b/shared/care/人を大切にする.md
@@ -4,3 +4,12 @@
 
 人を大切にする、careする、という点においてどう扱えばいいか。
 気遣いも一つではある。あとは肉体的に守ったり、健康に気を配ったりかな。気遣いの中で、空気というよりも物理的な部分も考えられる。ただ、それも気分は良くなるからmoodでいいのかも。
+
+- 理解されている
+- 肯定されている
+- 支援されている
+
+理解されたいというのは、単に似ている人を探しているのかも。親近感。
+自分を理解されることで親近感を覚える。
+
+情を示す。
