--- a/shared/society/tips/子どもに合わせる.md
+++ b/shared/society/tips/子どもに合わせる.md
@@ -3,3 +3,5 @@
 大人の中に子供が混ざるのはよくあることだけど、面倒ではある。子供がいることに気づいて、特別に対処しないといけない。大人だけの場とは違う。
 
 どちらか一方が楽しませないと会話が続かないなら、そもそも相手の態度が悪い。子供と会話していると思った方がいい。
+
+社交を知ってる大人と、そうでない子供では扱いが異なる。
