--- a/shared/voice/training/tips/声帯を鳴らす.md
+++ b/shared/voice/training/tips/声帯を鳴らす.md
@@ -27,3 +27,6 @@
 呼吸を鍛えたら、声帯は緩めていく。そのままだと声が強く重くなりすぎる。
 
 声帯に力が入って硬くなると、効率的に振動させられない。
+
+声帯を鳴らすには息の強さが必要。細くでもいい。
+逆に、裏声の場合は声帯を鳴らさずに喉を笛のように使うイメージ。息は弱く、太く。
