--- a/shared/voice/training/tips/息を漏らす.md
+++ b/shared/voice/training/tips/息を漏らす.md
@@ -1,3 +1,13 @@
+コツ:
+
+- 息を細くする
+
+問題:
+
+- 声帯を開きすぎて裏返る
+- 息の量が安定しない
+- 息が弱くて声帯が鳴らない
+
 息と声の割合を0:100から100:0までコントロールする。
 
 胸式呼吸で息を吐くのが基本。
@@ -11,3 +21,9 @@
 ポップスの高い曲も基本的に息漏れした曲と考えた方がいい。
 
 あえて息漏れする場合、息を支えすぎると息の量が足りない。
+
+息を漏らす場合は息の量を安定させるのが難しい。
+あとは声帯を開きすぎて裏返っちゃうとか。
+
+息を漏らす場合、息の量が多いと喉を痛めやすい。
+息を漏らすなら息は細くする。
