--- a/shared/collaboration/organization/tools/オフィス.md
+++ b/shared/collaboration/organization/tools/オフィス.md
@@ -57,3 +57,5 @@
 会議室に引き篭もるならオフィスである必要がない。
 
 オフィスは同僚とコミュニケーションしやすくなるけど、空調が悪かったり通勤が長かったりすると社員の負担が大きい。
+
+必要じゃないけど有用な情報が勝手に入ってくるのがオフィスの良いところ。でも邪魔な情報も入ってくるのが悪いところ。
