--- a/shared/job/hiring/recruitment/面接での質問の例.md
+++ b/shared/job/hiring/recruitment/面接での質問の例.md
@@ -1,1 +1,4 @@
 「土日に何をしているか」という質問は、生活のための労働がなければその人が何をしたいか、何にお金を使っているか、がわかる。
+
+面接では考え (idea) よりも行い (work) を聞く。
+考えはどれだけでも嘘をつけるけど、行いを聞くとディテールが必要なので嘘をつくのが難しい。
