--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -95,3 +95,8 @@
 
 別れ際に未来への期待感を与える。
 「次はこうしたいね」とか「あっという間だった」とか。
+
+まず、自分がどういう時に気分が良くなるか知っておく。特に、誰かにそうしてもらった時。
+相手にも同じようにする。
+
+「感謝ノート」を書いて、誰かからしてもらってことで気分が良くなったのを記録していくと、自分でもそれを他人に応用できる。
