--- a/shared/singing/歌の息継ぎ.md
+++ b/shared/singing/歌の息継ぎ.md
@@ -28,3 +28,7 @@
 息の圧を長く維持できるようになったら、息継ぎも減らせる。必要以上に減らす必要はないけど、一息で歌い切りたいところは一息にする。
 
 息継ぎと表現としてのブレスは違う。
+
+## その他
+
+息継ぎはできるだけ筋肉を使わなくていいほうがいい。吐ききった状態で横隔膜をできるだけ引っ張っておくと、腹筋を緩めるだけで一気に空気が入ってくる。
