--- a/shared/thinking/問い.md
+++ b/shared/thinking/問い.md
@@ -118,3 +118,30 @@
 - 概念: なに
 - 人物: だれ
 - 比較: どれ
+
+会話や思考で解像度を上げていくための基本は抽象と具象の往復。
+まず「どこに行った」とかの出来事や事実、思考であれば主題がある。
+抽象としては、価値観や考え方、捉え方などがある。
+具象としては、見聞きしたものや認識がある。
+
+事実確認
+
+- 何があったか
+- いつ
+- 誰と
+- どこで
+
+具象を掘り下げる
+
+- どう感じたか
+- どう思ったか
+- きっかけは何か
+
+抽象を掘り下げる
+
+- どうしてそうしたのか
+- どういう意味があるか
+
+事実の話ばかりだと広がるばかりで深くなってない。
+
+問いは考えの前に、何かを知るための基礎かも。
