--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -514,3 +514,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 信頼、頼りになる、というのは、機能の話だと思ってる。思った通りの働きができること。
 
 人を頼る、人に頼られることも考える。
+
+できないことを「できない」と言える人が一番信頼できる。でも、そのように評価してない馬鹿が多い。
