--- a/shared/voice/tips/有名な歌手の声の出し方.md
+++ b/shared/voice/tips/有名な歌手の声の出し方.md
@@ -1,3 +1,6 @@
 ミセスは絶対に「正しい」声の出し方はしてないけど、肺活量でなんとかなってる。結構鼻声。
 
 スピッツはかなり息漏れの多い地声で、重くて、細くて、強い声。
+
+米津玄師なんかは声のポジションを変えて声色を使い分けてるけど、フレーズの中では安定している。
+たとえば『死神』なんかだと少なくとも4種類は使ってる。
