--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -17,6 +17,13 @@
 舌や顎で押し込んでしまうと喉の空間は狭くなってしまう。
 喉の空間を広げながら喉を下げるには、首の筋肉で下に引っ張るしかない。
 
+## 喉が下がっているか確かめる
+
+喉が下がった声の特徴の一つとして、口を薄く開けて、唇や顎は動かさずに、舌だけで母音を変えられる。できないなら下がってない。
+
+喉を下げて声を出そうとすると声帯がくっつく時は奥に下がるような感覚がある。
+逆に、喉が上がっていると声帯は上に押されるような感覚がある。
+
 ## その他
 
 顎に力が入ると、顎で喉を下げてしまって喉が狭くなりやすい。
