--- a/shared/voice/training/ボイストレーニングの順序.md
+++ b/shared/voice/training/ボイストレーニングの順序.md
@@ -14,6 +14,8 @@
 3. 息を支える
 4. 声のポジションを保つ
 
+喉を下げて、声帯をしっかり鳴らして、腹から声を出すことができたら、ようやくスタートラインに立てる。発音の練習とか、歌の練習とか、ピッチを広げるとか。
+
 ### 姿勢を良くする
 
 - 背を伸ばして立つ（胸筋を持ち上げてほんの少し胸を張る感覚）
