--- a/shared/voice/training/tips/声を響かせる.md
+++ b/shared/voice/training/tips/声を響かせる.md
@@ -23,6 +23,8 @@
 練習では口も大きく開けて歌う。
 顎の力を抜く練習と、口内の空間を広く保つ練習。
 
+口に響かせる時は後ろの方の上側に響く感じ。前歯や前歯の裏、唇、舌などが痺れる感じがあるなら、もっと軟口蓋を上げて後ろの方を上に広げたほうがいい。口内が狭い。
+
 ## 喉に響かせる
 
 喉を下げる。
@@ -42,6 +44,11 @@
 声の種類というよりは、息の圧が高くなって、鼻までしっかり声が届いている状態。
 
 鼻濁音とかで鼻の方の気道を狭くして無理やり息の圧を高めてもヘッドボイスは出るけど、本当は気道を広くした方がよく響く。
+
+喉に響いてないのに鼻にばかり響かせても鼻声になるだけ。
+
+鼻濁音「んが」「ng」の発音で鳴るところを感じる。
+ただ、こればかりではダメで、発声としては悪いものになりがち。鼻声。感覚を掴む練習。
 
 ## その他
 
