--- a/shared/communication/media/language/languages/japanese/日本語の文法.md
+++ b/shared/communication/media/language/languages/japanese/日本語の文法.md
@@ -1,6 +1,8 @@
 「日本語には文法がない」とまで言われることもある。
 司馬遼太郎の言葉とされている。
 
+基本的に助詞が文中の言葉の役割を決めるので、文法というよりは助詞が重要。ある程度順序がバラバラでも成立する。
+
 実際のところ、文法というよりは動詞・形容詞の変形と助詞しかない。
 「食べる」「大きなイチゴを」「彼と一緒に」「今日」みたいな単位で順序を組み替えても成立する。
 まぁ、聞いていてわかりやすい順序はあるけど。
@@ -15,3 +17,5 @@
 オノマトペも常識に依存するし。
 
 日本語や中国語の先頭にあるのは、主語というよりも主題。
+
+日本語の主語は主体というよりもその分のテーマ。
