--- a/shared/people/集団.md
+++ b/shared/people/集団.md
@@ -5,3 +5,5 @@
 - Herd: 動物的な群れ
 
 群集心理はPopular mindとか、Crowd Psychologyと呼ばれる。
+
+集団の人数が多いとその中でさらにグループができやすい。単純に全員と関わるのはコミュニケーションコストが高すぎる。最大でも9人、できれば5人までに抑えるのがちょうどいい。
