--- a/shared/communication/media/language/languages/english/英語の文法.md
+++ b/shared/communication/media/language/languages/english/英語の文法.md
@@ -1,3 +1,11 @@
 https://youtube.com/watch?v=KFSCjwadI48&si=k-ew02cAT3J39C-a
 目的語は一つにする。
 "What did you eat lunch?" では目的語がwhatとlunchの二つあるので、"What did you eat for lunch?" にする。
+
+英語の主語は、日本語と違って動詞の主体を指す。誰がそうしたのか、何がそうなったのか。特に、誰がそうしたのか、が重要。
+
+英語ではまず人を優先して主語にする。
+職業の話をするときも「私の仕事は」と考えず、単に「私は」と考えればいい。
+
+- 誰がそうした
+- 何がそうなった
