--- a/shared/popular/人に好かれる.md
+++ b/shared/popular/人に好かれる.md
@@ -30,3 +30,9 @@
 好かれることは、選ばれること。
 
 身なりを綺麗にして礼儀をよくした上で、なんとなく嫌い、なんとなく苦手、を解消するのは難しい。最低限清潔であるべきではあるが、それ以外の部分は好みでしかない。
+
+人に好かれるためには、まず良い意味で興味を引くのが大事。
+相手から声をかけてもらう。
+
+- 持ち物にこだわる
+- ギャップを演出する
