--- a/shared/care/tips/関心を持つ.md
+++ b/shared/care/tips/関心を持つ.md
@@ -32,3 +32,11 @@
 LoveよりもCareが先。注意して見る。
 
 興味がなくてもどうしても嫌じゃないなら一度は関わってみる。社交の基本でもある。
+
+- 好感による関心
+  - 親近感
+- 好奇心による関心
+  - 違和感
+- 打算による関心
+  - 機能
+  - 財産
