--- a/shared/people/人柄.md
+++ b/shared/people/人柄.md
@@ -4,4 +4,18 @@
   - こだわり
   - 目標
     - 頑張っていること
+  - 知識や論理
 - 感じ方
+  - 感覚
+    - どう思ったか
+    - どう感じたか
+  - 経験
+
+客観的なことばかりではなく、主観を問うことで人柄を知る。
+
+その人がどのように世界を認識しているか。
+
+能力や技術は人柄とはまた違うところ。
+性格ともちょっと違うかも。性格はどちらかというと行動の面が強い。どう行動するか。目標なんかも含まれない。
+
+人の人たる所以は認識にある。我思う、故に我あり。
