--- a/shared/popular/好感度.md
+++ b/shared/popular/好感度.md
@@ -30,3 +30,6 @@ favor には「特別扱いする、贔屓する」意味がある。
 
 好感のベースは健康なのかな？余裕があって、エネルギッシュで、明るくて、美しくて、顔色が良くて、強そうなのは良いことだ。
 逆にステータスは財産や福祉の面。自分が生きていくためにも利用できるかどうか。
+
+好感というのは基本的に親近感と近い。
+ただ、そもそも興味がないと「一緒だね」とか言っても「ふーん」で終わる。この違いはどこからくるか。
