--- a/shared/love/好意.md
+++ b/shared/love/好意.md
@@ -91,3 +91,7 @@
 
 価値観やライフスタイルは似ているほどいい。
 でもそこから生じる行動は違ったほうが手分けしやすい。
+
+興味を持つのが好意の第一歩。
+
+好意と興味は近いところにある。好奇心がベース。奇妙でおかしいもの、違和感があるものに惹かれる。怖いものも気になる。
