--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -988,3 +988,13 @@ loveとgoodの概念は近い。
 好みじゃないけど良いところ、もあるかも。
 
 興味や関心が基礎にある。好意でもある。
+でも、愛するからこそそれが生まれる面がある。
+愛は行為で、興味や好意のような心の動きではない。
+
+愛は好意につながるけど、好意そのものではない。
+
+他人はあなたほどあなたを愛していない。
+
+人は他人に興味がない。
+
+人は人を愛していない。
