--- a/shared/mood/making/気遣い.md
+++ b/shared/mood/making/気遣い.md
@@ -78,3 +78,6 @@
 
 自分にとっては嘘をつかない方が楽なのに嘘をつくのは気遣いである。
 浮気とかは自分のためだけど、相手の話を知らないふりするのはそうではない。「知ってるよ。」の方が楽。でも相手の気分を上げるために嘘をついている。
+
+気を遣っているのが感じ取れると気まずい。
+気遣いはさりげない方がいい。
