--- a/shared/sex/恋の話題.md
+++ b/shared/sex/恋の話題.md
@@ -10,6 +10,8 @@
 - もし恋人だったら嫌なところ
 - セクシーだと思う人は？
 - 男女間の友情はあると思うか
+- この中に気になる人はいるか
+  - 「選べる立場じゃないから」
 - (恋人や恋愛対象がいるなら)
   - 相手との出会いは？
   - 相手の好きなところは？
