--- a/shared/popular/人を集める.md
+++ b/shared/popular/人を集める.md
@@ -37,3 +37,9 @@
 
 どうして人が集まるか。
 どうやって人を集めるか。
+
+人を集めると、人に知られる、目立つ、という面もある。良くも悪くも。
+
+目立つのが良いことかどうかまだわかってない。
+
+不用意に目立つのがよくないだけで、信頼できる限られた人に興味を持ってもらうのは良いことだ。
