--- a/shared/trust/素直さ.md
+++ b/shared/trust/素直さ.md
@@ -1,3 +1,13 @@
+速く伝えること。
+
+- 駆け引きしない
+- 遠回しに言わない
+- 格好つけない
+- 相手の気分を悪くさせない
+- 遠慮しない
+- 後回しにしない
+- シンプルな言葉を使う
+
 格好つけないこと。
 
 人間を格好つけさせようとするあらゆる圧力は素直さとトレードオフになっている。
@@ -19,3 +29,5 @@
 
 素直さというのは、早くやること。
 素直に気持ちを伝えるというのは、早く気持ちを伝える。後回しにしない。
+
+相手の気分が悪くなると、速く伝わらない。抵抗が強くなる。
