--- a/shared/mood/vibe/ノリ.md
+++ b/shared/mood/vibe/ノリ.md
@@ -21,3 +21,5 @@
 ノリに関しては音楽と関連する部分がある。テンポが速くて抑揚が大きいほうがノリが良い。
 
 会話のノリを維持するために速いテンポは必要かどうか。ゆっくりしたテンポでもいいかどうか。
+
+ノリは別にどうでもよくて、ノリが悪い人に対して態度を悪くしてムードを悪くするのはクズ。
