--- a/shared/breath/training/tips/軟口蓋を上げる.md
+++ b/shared/breath/training/tips/軟口蓋を上げる.md
@@ -2,3 +2,9 @@
 
 口を横から指で挟んで、筋のあるあたりを指で軽く押し込むと軟口蓋が上がるのが感じられる。上顎の後ろの方が上に引っ張られる感じ。
 https://youtube.com/shorts/Dvyl3GFpw_M?si=2O6QMTOnj5sgEQL-
+
+## その他
+
+軟口蓋を上げるときは顔の上半分を持ち上げるイメージ。
+
+軟口蓋を上げて口内の空間を広げても喉や舌が上がったら喉の空間が狭くなってしまう。
