--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -139,3 +139,5 @@ loveもworkも利害関係は別で、careにあるのかも。
 体力がないと他人の面倒まで見きれない。
 
 人にめんどくさいと思うのはその人に対して情がないから。情があったら「やれやれ」する。
+
+知り合いの中でも自分のことを好きじゃない人はどうなってもいい。
