--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -90,3 +90,20 @@
 気遣いはさりげない方がいい。
 
 場を盛り上げるためにギャップを演出したりして楽しませようとしてくれているのに、乗らずに遠目で見ているのは薄情だ。気が利かない。恥をかかせている。
+
+「かえって気を遣わせたかも」と思ったら、もっとさりげなく配慮する方法を考えるチャンス。
+あとは「かえって気を遣わせましたか？」とか、謝るのもいい。
+
+情はやはり気遣いが基本。
+情がある行動、手を抜かない行動が気遣いの基本。
+
+お互いに気を遣わない、気を遣わなくても一緒にいられる関係が理想。お互いにほっといても平気だけど、なんとなく一緒にいられるみたいな。
+
+気遣いの反対は手抜きで、気遣いには手がかかる。正直、気遣いされたい人というのは、手がかかる子どもみたいなものだ。
+
+大人は、相手が気を遣わなくてもいいように振る舞うべき。相手が気を抜ける、手を抜けるように振る舞う。自分のことは自分でやる。
+
+自分のことを自分でできないと相手に気を遣わせる。
+自分で自分の機嫌が取れないとか、態度が悪いとか。
+
+長く付き合うことを考えたら、重要なのはお互いに気を遣わなくていいこと、コストが低いことだと思う。親しくなる場合もできるだけ気を遣わなくていいようになっていくといい。
