--- a/shared/communication/frameworks/assertion/tips/好きなものを語る.md
+++ b/shared/communication/frameworks/assertion/tips/好きなものを語る.md
@@ -18,3 +18,6 @@
 知ることと語ることは一体。詳しく知らないと詳しく語れない。
 
 - 好きなところを一言でいうと？
+
+何かを語るならまずは好きなところをたくさんならべるのが基本。感じたこと、思ったことの中でポジティブなもの。事実はいらない。
+次にそのベースになった価値観。好きな歌手の声が好きとかだったら、地声が強い方が好きだから、とかは価値観。考えたことが価値観になる。自己分析。
