--- a/shared/discussion/議論の前提.md
+++ b/shared/discussion/議論の前提.md
@@ -6,3 +6,5 @@
 全く譲らないということはあり得ない。
 ここまでは譲れる、という落とし所を決めておいて、どうしても無理なら破談にする。
 また、落とし所は採決者、主に上司にも確認しておくとスムーズ。
+
+議論する時はまず全員が相手の意見を肯定するところから始める。どれも良いことを認めつつ、一番を決める。
