--- a/shared/engagement/tips/謝る.md
+++ b/shared/engagement/tips/謝る.md
@@ -4,3 +4,5 @@
 謝るかどうかは相手と付き合いを続けたいかどうか。
 「自分が悪かった」ではなくて、「不快にさせてごめん」と謝る。自分が悪いかどうかは関係ない。
 価値観があまりにも合わなかったら縁を切るのも方針の一つではある。
+
+謝る時はやったことのわりに硬すぎると相手に気を遣わせる。大きな損失には硬く謝るべきだけど、軽いことで真剣に謝られても困る。でも軽いよりは重い方がいいというのもある。
