--- a/shared/feeling/感覚.md
+++ b/shared/feeling/感覚.md
@@ -74,3 +74,13 @@ scent 嗅覚
 考えるのは、考えを改めること。感じるだけなら、なにも改めなくていい。基本的には同じ刺激に対して同じ感覚が繰り返されつつ、弱まっていく。
 
 老いると感覚は鈍くなっていく。最後はどんな刺激にも反応しなくなる。
+
+- 気持ちいい
+- 気持ち悪い
+- 想像できない
+
+- 味覚
+- 視覚
+- 聴覚
+- 嗅覚
+- 触覚
