--- a/shared/memory/記憶.md
+++ b/shared/memory/記憶.md
@@ -49,3 +49,7 @@ https://allabout.co.jp/gm/gc/493724/
 記憶力は関心がないと働かないので、覚えられないのは興味がないだけ。
 
 暗記は一つだけ覚えるんじゃなくて、導出する方法を覚えたりして周りとの関連を覚えると思い出しやすい。
+
+感じるというのは、覚えること。知覚することと、記憶すること。
+
+記憶されなかったことは感じたとは言えないのかも。
