--- a/shared/mood/vibe/ノリ.md
+++ b/shared/mood/vibe/ノリ.md
@@ -23,3 +23,5 @@
 会話のノリを維持するために速いテンポは必要かどうか。ゆっくりしたテンポでもいいかどうか。
 
 ノリは別にどうでもよくて、ノリが悪い人に対して態度を悪くしてムードを悪くするのはクズ。
+
+ノリには重さ、軽さがある。ノリが軽いほど勢いに乗りやすい。普通はそこまで軽くない人が多いので、助走が必要。
