--- a/shared/society/tips/人を覚える.md
+++ b/shared/society/tips/人を覚える.md
@@ -31,3 +31,7 @@
 - 髪の色
 - 髪の長さ
 - 性格の明るさ
+
+もっと顔を上げて人を観察するべきなのかも。結構遠慮しちゃうからな。
+
+人を観察してて「どうかした？」みたいに聞かれる場合は、そのとき考えてたことを素直に言うと話題になる。「印象的な顔だと思うけど何がそれを構成してるんだろ、って考えてました」とか。「顔ちっちゃいなぁって思ってました」とか。
