--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -516,3 +516,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 人を頼る、人に頼られることも考える。
 
 できないことを「できない」と言える人が一番信頼できる。でも、そのように評価してない馬鹿が多い。
+
+謙虚と尊敬が信頼されるための基礎でもある。
