--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -204,3 +204,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 sで長く発声したままため息を吐くように声を出す練習。
 
 喉を下げるだけなら舌で押す方法もあるけど、それでは喉が狭くなる。あくびみたいな声になる。
+
+喉を下げて一番重要なのがuの音。日本語の「う」とは違って、口を開いたまま舌を平たくして喉の奥で音を鳴らす。
