--- a/shared/business/corporation/評価制度.md
+++ b/shared/business/corporation/評価制度.md
@@ -17,3 +17,5 @@
 相手を理解するのが先、評価するのが後。理解していないのに評価しても部下はついてこない。
 
 ノルマは、マネジメントの方法としてはゴミだけど、評価制度としてはわかりやすい。社員に等級をつけて、単純に売上で昇級、降級を行う。ただ、それに加えて倫理試験やセキュリティ試験なども必要。あとは短期的な指標だけでなく、何期か連続した場合に昇級・降級する制度も考えられる。
+
+数値評価は必ずハックされる。不正というよりは、その数値に特化してそれ以外は無視するとか。
