--- a/shared/communication/media/language/言葉遣い.md
+++ b/shared/communication/media/language/言葉遣い.md
@@ -57,3 +57,6 @@
 自分に向けたい言葉を他人にも使おう。
 
 「（根拠）だから、（主張）がいい」とするよりも「（主張）がいい。（根拠）だから」とした方が聞き取りやすいし、読みやすい。
+
+攻撃的というか、ショッキングな言葉遣いは引かれてやすい。
+語彙が攻撃的だと、それを抑えようとして無駄なリソースが割かれるので、普段から穏やかな言葉を使うべき。
