--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -133,3 +133,5 @@
 結局、一人暮らしで慎ましく生活しているとそこまで支出がない。
 結婚でもしない限り、あくせく働く必要はないのかも。
 就職が結婚に必ずつながるわけでもない。
+
+[プロが成婚を止める離婚の確率が高い危険サインを10個教えます - YouTube](https://youtu.be/i1p7XdtgcvI?si=VRJupZ5gPHY2tx8I)
