--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -373,3 +373,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 > 行き過ぎた冗談を本気にして高くなっている鼻をへし折ってやろうとする気持ちも、わからなくもない。
 > ――問題は、私が本当にできるという一点だ。
 > 『狂乱令嬢ニア・リストン』
+
+意見を聞いてくれない、尊重してくれない、みたいなのは子ども扱いされてるのかな？
