--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -8,3 +8,5 @@
 恋愛はある意味現実とは違っていて、浮ついている。
 
 交際中は別に恋人ではないので、奪ったっていい。
+
+交際中にセックスしないのも選択の一つではあるけど、結婚してから初めてセックスするのはよくない。恋人として子供を作ることまで想定してから結婚した方が間違いが少ない。
