--- a/shared/society/tips/人を覚える.md
+++ b/shared/society/tips/人を覚える.md
@@ -8,6 +8,18 @@
 
 主な観点:
 
+- 外見
+  - 肉体
+    - 顔
+    - 体
+  - 服装
+- 行動
+- 人柄
+  - 考え方
+  - 感じ方
+
+細かいところ
+
 - 顔
 - 性別（男か女か）
 - 年齢・年代
@@ -31,6 +43,8 @@
 - 髪の色
 - 髪の長さ
 - 性格の明るさ
+
+人を覚えてないのは遠慮してよく見てないせいかも。
 
 もっと顔を上げて人を観察するべきなのかも。結構遠慮しちゃうからな。
 
