--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -173,3 +173,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 - 誰かと比較しない
 
 比較というのは評価の前段階で、結果的には評価していることになる。
+
+打算だけで好感がほんとにないというか、生理的に無理なときは結局長続きするのが大変。どうしても無理な人はいる。
+政略結婚とか強い使命感があれば相性が悪くても関係を維持できることもある。
