--- a/shared/entertainment/つまらない人.md
+++ b/shared/entertainment/つまらない人.md
@@ -18,3 +18,8 @@
 ただ、刺激はマイナスの面もあって、怖がらせることもある。
 
 否定するのはつまらない。できるだけ乗っかってボケる。
+
+相手がつまらないのは、ほとんどの場合、自分がつまらないからだ。
+会話を広げて相手の人柄を引き出せてない。
+
+つまらない、というのは興味があるものがない。
