--- a/shared/people/人柄.md
+++ b/shared/people/人柄.md
@@ -24,3 +24,15 @@
 性格ともちょっと違うかも。性格はどちらかというと行動の面が強い。どう行動するか。目標なんかも含まれない。
 
 人の人たる所以は認識にある。我思う、故に我あり。
+
+考え方を語るための基本は筋道を考えること。論理。こうしてこうしてこうだからこう。みたいに話す。元々、まず、次に、最後に、みたいな順序を扱う言葉を使うことも多い。
+
+感じ方を話すのは難しい。
+感じ方は順序通りにはならない。散らばっているものだ。それを一つ一つ拾い上げる。
+重要なのは、話すときではなく、そもそもそれを感じたときに、何度も思い出して覚えること。言葉にすること。
+話すときにどうにかしようとするのは遅い。
+印象としてまとめてしまう前の原始的な知覚を言葉にする。
+心理描写が多い文学作品を読んで語彙を増やすのもいいかも。
+
+感じ方を話すのに大事なのはどこを注視しているか。
+表現も大事だけど、まずは目の付け所が大事。どこが重要だと思っているか。
