--- a/shared/trust/素直さ.md
+++ b/shared/trust/素直さ.md
@@ -31,3 +31,5 @@
 素直に気持ちを伝えるというのは、早く気持ちを伝える。後回しにしない。
 
 相手の気分が悪くなると、速く伝わらない。抵抗が強くなる。
+
+素直というのは、コミュニケーションが「速い」ことで、でも単に雑にするだけだとむしろ伝わるのは遅くなる。相手の気分が悪くなると相手は聞き入れなかったりする。早く伝えるためには、結局ある程度の丁寧さは必要で、でも駆け引きとか遠回しでわかりづらい言葉は邪魔。
