--- a/shared/care/手抜き.md
+++ b/shared/care/手抜き.md
@@ -8,5 +8,10 @@
 - 無視する
 - 語彙が少ない
 - すぐ帰ろうとする
+- 相手の気遣いを返さない
+- 約束を守らない
+  - 遅刻する
 
 語彙が少ないと使いまわしている、手を抜いている印象になる。
+
+手抜きしないというのは完璧を目指すんじゃなくて、手を抜くか迷ったときに抜かない。手間を惜しまない。
