--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -107,3 +107,6 @@
 自分で自分の機嫌が取れないとか、態度が悪いとか。
 
 長く付き合うことを考えたら、重要なのはお互いに気を遣わなくていいこと、コストが低いことだと思う。親しくなる場合もできるだけ気を遣わなくていいようになっていくといい。
+
+気遣いを徹底しすぎると自分が疲れてしまう。
+そこで、全体的に手を抜くのではなくて、一部の人だけを特別扱いすると、それはそれで空気悪い。
