--- a/shared/intimacy/contact/アイコンタクト.md
+++ b/shared/intimacy/contact/アイコンタクト.md
@@ -34,3 +34,5 @@
 
 アイコンタクトはジェスチャーや笑顔とセット。
 アイコンタクトが成立したことをわかりやすく伝える。
+
+ネガティブなことを言ってる時に目をしっかり合わせていると「お前のことだよ」って言ってるみたいなので、食事に目を向けたりしながらさらっと言うか、そもそも言わないのが吉。
