--- a/shared/game/theory/ルールを守らせる.md
+++ b/shared/game/theory/ルールを守らせる.md
@@ -6,3 +6,8 @@
 すでにルールが破られていたり、コードが汚かったりするとルールはどうでも良くなる。割れ窓。
 
 割れ窓を放置してはいけない。
+
+守られないルールは意味がないどころか害がある。「守られない」という前例を作ってしまう。
+
+強制してもいつかは破られる。
+自然と自分から守りたくなるようなルールであるべき。
