--- a/shared/intimacy/tips/離れた方がいい人.md
+++ b/shared/intimacy/tips/離れた方がいい人.md
@@ -1,3 +1,13 @@
+- 誰かを否定する
+  - 誰かを無視する
+    - 誰かの考えたことを無視する
+    - 誰かの感じたことを無視する
+  - 誰かの好きなもの、好きなことを否定する
+- 謝るだけで罪を償わない
+- 自分の責任を他人に押しつける (他責思考)
+
 盗みと詐欺は論外。
 
 自分の好きなものを否定する人からは離れた方がいい。
+
+その人の誰かに対する態度は、10年後のあなたに対する態度だ。
