--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -1,3 +1,8 @@
+- 肯定する
+- 試行回数を増やす
+  - 失敗を許容する
+  - 失敗しても致命的にならないように備える
+
 幸せになるためには、幸せを感じないといけない。
 どれだけ実績を積み重ねても、どれだけ財産を集めても、幸せを感じられなければ意味がない。
 
@@ -26,3 +31,5 @@
 人が幸せそうにしているのを見て幸せを感じないのは歪んでいる。
 
 自慢話も本来は幸せのお裾分けなのかも。話し方が下手なだけで。
+
+ポジティブなのは幸せの要素の一つ。
