--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -1,28 +1,28 @@
-## 方針
-
-- 関心を示す
-  - 理解を示す
+- 興味や関心、理解を示す
+  - 目を向ける
+  - 目を合わせる
+  - 話しかける
+  - 体を近づける
+    - 近くの席に座る
+  - 電話やメールで連絡する
+  - 考え方や感じ方を知ろうとする
+  - 変化に気づいて指摘する
+  - 相手の言葉を拾う
+  - 相手の感情を言い当てる
 - 好意を示す
-
-## 方法
-
-- 目を向ける
-- 目を合わせる
-- 微笑みかける
-- 手を振る
-- 話しかける
-- 褒める
-- 体を近づける
-  - 近くの席に座る
-- 電話やメールで連絡する
-- 変化に気づいて指摘する
-- 贈り物をする
-- 相手の言葉を拾う
-- 振る舞いが似てくる、癖が移る
-- デートに誘う
-- 体を触る
-- 言葉で愛を伝える
-- 口説く
+  - 微笑みかける
+  - 手を振る
+  - 相手の良いところを伝える
+    - 褒める
+    - 喜ぶ
+    - 感謝を伝える
+  - 振る舞いが似てくる、癖が移る
+  - 贈り物をする
+- 恋愛感情を示す
+  - デートに誘う
+  - 体を触る
+  - 言葉で愛を伝える
+  - 口説く
 
 ## その他
 
