--- a/shared/mood/気分が下がるとき.md
+++ b/shared/mood/気分が下がるとき.md
@@ -32,6 +32,7 @@
 - 大切にされていないと感じる
   - 信頼されていない
   - 尊重されていない
+    - 無視された
     - 遅刻された
   - 返答が遅い
   - 話を聞いてない
@@ -54,3 +55,5 @@
 気分が悪くなるのは、不調、不快、不幸、あたりか。
 
 自分も相手もそれを聞いた人も気分が悪くならない、三方よし、を目指す。
+
+人と会って気分が悪くなる人は、大切にされてない感が特に大きいかも。
