--- a/shared/respect/尊重される.md
+++ b/shared/respect/尊重される.md
@@ -4,3 +4,9 @@
 自分の情報を開示しないまま他人と付き合っていても、認められたとは言えない。自信にもつながらない。
 
 何を認められるべきか。
+
+知らない人にいきなり尊敬されるのは難しいので、そもそも誰にでもリスペクトという行為が気遣いとしてできる大人とだけ関わる、というのも一つの手ではある。
+子供みたいな大人と関わって世話したり面倒を見たりすることを楽しんだり食い物にしたりするのであれば関わるといい。
+
+不特定多数（誰か）に呼びかけるよりも、個人を特定して呼びかける方が無視しづらい。
+これもある意味では「誰か」ではなく「あなた」として、まず相手を尊重しているのかも。
