--- a/shared/respect/尊重を示す.md
+++ b/shared/respect/尊重を示す.md
@@ -88,6 +88,10 @@
 無駄な言葉を付け加えて手間をかけるのが人間関係では相手に敬意を示すことになる。
 手間をかけることで、「あなたを大事に思っていますよ」という姿勢を示す。
 
+名前を呼ぶのは「誰か」ではないその人の存在を認めている。
+
+関心を持たない、無視する、というのは、相手をつまらないと思っている。
+
 ## References
 
 https://diamond.jp/articles/-/317715
