--- a/shared/influence/people/人を誘う.md
+++ b/shared/influence/people/人を誘う.md
@@ -1,3 +1,8 @@
+コツ:
+
+- 日程まで決める
+- 相手の都合に合わせる
+
 人を誘うのは人を動かすため。
 直接的に働きかけて人を動かす。
 
@@ -5,3 +10,10 @@
 相手も「そうしたい」と思っているタイミングで誘うのが最も効果的。
 
 クリスマスとかイベントがある時に予定が空いてるか聞くのは、間接的に誘っている。
+
+予定を決める際に聞いておいた方がいいこと:
+
+- 休みが合うかどうか
+- どれくらいの頻度でその活動をしているか
+
+「都合が合わない」と言った時は、単純に断られている場合もある。
