--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -15,3 +15,8 @@
 自分のキャラクターとのギャップで笑いをとる手法は、他の人が演じても面白くない。
 
 笑いは緊張感を利用する。まず緊張感を生み出して、解消する。緊張感を作るのが難しい。
+
+驚きは笑いにつながる場合がある。
+ただ、驚きは緊張感。緊張させるだけで、緩和できないとただの迷惑になる。
+
+クイズを出すのもちょっとした驚き。
