--- a/shared/intimacy/tips/連絡先を交換する.md
+++ b/shared/intimacy/tips/連絡先を交換する.md
@@ -1,3 +1,10 @@
+- 理由をつける
+  - 写真やURLを送るから
+  - 予定を送るから
+  - 当日連絡するから
+
+## その他
+
 次の予定を決めて「何かあったら連絡するので」と交換するのが自然で、断られにくい。
 
 次の予定も、いつ会うかまで詳しく決めた方がいい。
@@ -6,11 +13,6 @@
 
 その人と一緒にやりたいことを語る。
 単に食事とか共通の趣味のために会うのもいいし、ビジネスかもしれない。
-
-予定を決める際に聞いておいた方がいいこと:
-
-- 休みが合うかどうか
-- どれくらいの頻度でその活動をしているか
 
 連絡先を交換するだけではなくて、連絡する。
 
